--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "author": "",
   "type": "module",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "devDependencies": {
     "@types/node": "^18.11.10",
     "prettier": "^2.8.0",
@@ -17,8 +15,5 @@
   },
   "engines": {
     "node": ">=19"
-  },
-  "dependencies": {
-    "remeda": "^1.3.0"
   }
 }
